# vsomeip_simulator

./: CMakeLists.txt  README.md
include/app_manager/: AppManager.hpp
include/apps_simulator/: App.hpp
include/configuration/: ConfigurationAdapter.hpp
include/interfaces/: IApp.hpp  IAppManager.hpp  IConfigurationReader.hpp  IFileHandler.hpp  IThreadCommands.hpp
include/simulator/: Simulator.hpp
include/utilities/: FileHandler.hpp  Json.hpp  ThreadCommands.hpp  someip_datatypes.hpp
src/: main.cpp
src/apps_simulator/: App.cpp
src/configuration/: ConfigurationAdapter.cpp
src/simulator/: Simulator.cpp
src/utilities/: FileHandler.cpp  Json.cpp
